# zserio-tutorial-cpp

./: .gitignore  CMakeLists.txt  README.md  tutorial.zs  zserio.jar.txt
.github/workflows/: build_linux.yml  build_windows.yml
cmake/: zserio_download.cmake
conan/: CMakeLists.txt  README.md  conanfile.py
pmr/: CMakeLists.txt  README.md
pmr/src/: Main.cpp  StaticMemoryResource.h
pmr/src/tutorial/: Employee.h  Experience.h  Language.h  Role.h  Tutorial.cpp
src/: Main.cpp  main.cpp
src/tutorial/: Employee.h  Experience.h  Language.h  Role.h  Tutorial.cpp
